--- a/with_BERT_from_scratch.ipynb
+++ b/with_BERT_from_scratch.ipynb
@@ -734,10 +734,18 @@
    ],
    "source": [
     "accuracy = evaluate.load('accuracy')\n",
+    "f1 = evaluate.load('f1')\n",
+    "precision = evaluate.load('precision')\n",
+    "recall = evaluate.load('recall')\n",
     "def metrics(pred):\n",
     "    predictions, labels = pred\n",
     "    predictions = np.argmax(predictions, axis=1)\n",
-    "    return accuracy.compute(predictions=predictions, references=labels)"
+    "    ret = dict()\n",
+    "    ret.update(accuracy.compute(predictions=predictions, references=labels))\n",
+    "    ret.update(f1.compute(predictions=predictions, references=labels, average=\"macro\"))\n",
+    "    ret.update(precision.compute(predictions=predictions, references=labels, average='macro'))\n",
+    "    ret.update(recall.compute(predictions=predictions, references=labels, average='macro'))\n",
+    "    return ret"
    ],
    "metadata": {
     "colab": {
@@ -812,7 +820,7 @@
     "    weight_decay=0.2,\n",
     "    evaluation_strategy='epoch',\n",
     "    save_strategy='epoch',\n",
-    "    logging_strategy='steps'\n",
+    "    logging_strategy='epoch'\n",
     ")\n",
     "data_collator = DataCollatorWithPadding(tokenizer=tokenizer, return_tensors='pt')\n",
     "trainer = Trainer(\n",
